--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"
     />
-    <title>Portfolio</title>
+    <title>Portfolioo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
